(include ../../dune.flags.inc)
(executable
 (package proof_fuzzer)
;(name proof_fuzzer)
 (public_name proof_fuzzer)
 (modes exe)
 (libraries
   ;;opam libraries
   async_unix
   splittable_random
   result
   async
   async_kernel
   core
   core_kernel
   base
   base.caml
   sexplib0
   base_quickcheck
   ppx_inline_test.config
   bisect_ppx.runtime
   bisect_ppx.common
   bin_prot
   bin_prot.shape
   ppx_version.runtime
   ;;local libraries
   pickles
   kimchi_backend.pasta
   kimchi_backend.pasta.basic
   random_oracle
   mina_compile_config
   mina_runtime_config
   transaction_witness
   transaction_protocol_state
   coda_genesis_ledger
   pickles_types
   mina_numbers
   random_oracle_input
   genesis_ledger_helper
   mina_state
   mina_generators
   mina_base
   currency
   mina_ledger
   mina_graphql
   genesis_constants
   secrets
   transaction_snark
   signature_lib
   data_hash_lib
   consensus
   with_hash
   genesis_ledger_helper.lib
   snark_params
   pickles.backend
   kimchi_backend
   mina_base.import
   mina_transaction_logic
   staged_ledger_diff
   mina_wire_types
   mina_tree
   block_time
   mina_transaction
   ;; txn pool
   parallel
   pipe_lib
   network_pool
   logger
   precomputed_values
   trust_system
   verifier
   child_processes
   network_peer
   ledger_proof
   coda_genesis_proof
   hex
 )
 (preprocessor_deps ../../config.mlh)
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_custom_printf ppx_mina ppx_version ppx_let ppx_sexp_conv
                  ppx_hash ppx_compare ppx_deriving_yojson h_list.ppx ppx_inline_test)))