(library
 (name internal_tracing)
 (public_name internal_tracing)
 (library_flags -linkall)
 (inline_tests)
 (libraries
  ;; opam libraries
  base.base_internalhash_types
  core
  sexplib0
  yojson
  ;; local libraries
  mina_base
  mina_numbers
  ;; opam libraries
  core_kernel)
 (preprocess
  (pps ppx_jane ppx_deriving_yojson))
 (instrumentation
  (backend bisect_ppx))
 (synopsis "Block tracing"))
