(library
 (name internal_tracing)
 (public_name internal_tracing)
 (library_flags -linkall)
 (inline_tests)
 (libraries
  ;; opam libraries
  base.base_internalhash_types
  core
  core_kernel
  sexplib0
  yojson
  async_kernel
  bin_prot.shape
 )
 (preprocess
  (pps ppx_jane ppx_deriving_yojson ppx_bin_prot))
 (instrumentation
  (backend bisect_ppx))
 (synopsis "Block tracing"))
