(library
 (name internal_tracing)
 (public_name internal_tracing)
 (library_flags -linkall)
 (inline_tests)
 (libraries
  ;; opam libraries
  base.base_internalhash_types
  core
  core_kernel
  sexplib0
  yojson
  async_kernel
 )
 (preprocess
  (pps ppx_jane ppx_deriving_yojson))
 (instrumentation
  (backend bisect_ppx))
 (synopsis "Block tracing"))
